syntax = "proto3";

package toWorkerTransfer;

option go_package = "./protocol/toWorker/respSessionInfo;respSessionInfo";

//返回session信息到工作进程
message RespSessionInfo {
  //当前连接的id
  uint32 sessionId = 1;
  //用户登录后存储在网关中的信息
  string User = 2;
  //用户是否登录成功
  bool loginStatus = 3;
  //用户订阅的主题
  repeated string topics = 4;
}